--- a/capitulo05.Rmd
+++ b/capitulo05.Rmd
@@ -76,8 +76,8 @@ knitr::opts_chunk$set(
 
 # Conclusiones finales
 
-  A lo largo de este trabajo hemos analizado los distintos métodos de reparto de escaños para un reparto proporcional de los mismos. En el primer bloque hemos analizado los distintos métodos de escaños modificando tanto el número de escaños a repartir, el número de partidos que se presentan a la elección y la concentración de los votos. En general todos los métodos siguen un mismo comportamiento y no se aprecia una gran diferencia entre los distintos métodos de reparto, únicamente difieren del comportamiento habitual los métodos  Imperiali, Huntington-Hill y Adams. Una vez analizados todos ellos el grupo que es más proporcional es el del método del resto mayor, en los que se encuentran el cociente Droop, Hare e Imperiali. En el grupo de los métodos de resto mayores el más proporcional es el método de Saint-Lague. El método D´Hondt, utilizado en España, no se encuentra entre los métodos más proporcionales por lo que no sería el método más deseable para utilizar en España, siendo conveniente debatir un cambio de método si lo que se busca es una mayor proporcionalidad entre los votos y escaños obtenidos.  
-  En el segundo bloque hemos analizado las distintas elecciones en España a partir del 1977, aplicando los distintos métodos de reparto de escaños para compararlos entre sí y analizando el nivel de proporcionalidad de los distintos métodos. Los métodos más proporcionados resultaron ser el Saint-Lague por parte de los métodos de promedio mayor y por los métodos de resto mayor el mejor método es el LR-Hare. El método que se desempeña peor es el método Imperiali. Es interesante observar el método D´Hondt, método utilizado actualmente en España para el reparto de escaños al congreso. En el caso de que nuestro objetivo sea la pura proporcionalidad escaños-votos es claro que no es el método más óptimo, pero en cambio sí que por otra parte se observa que tiene una cualidad particular que lo hace atractivo como método de reparto, esto es, a pesar de no ser el método más proporcional sí que facilita la gobernanza, siendo posible en varias elecciones alcanzar la mayoría absoluta. Por este motivo se comprende la elección de este método de reparto de escaños en España, puesto que entre todos los métodos analizados éste es dentro de los más proporcionales el que más facilita la gobernanza.
+  A lo largo de este trabajo hemos analizado los distintos métodos de reparto de escaños para un reparto proporcional de los mismos. En el primer bloque hemos analizado los distintos métodos de escaños modificando tanto el número de escaños a repartir, el número de partidos que se presentan a la elección y la concentración de los votos. En general todos los métodos siguen un mismo comportamiento y no se aprecia una gran diferencia entre los distintos métodos de reparto, únicamente difieren del comportamiento habitual los métodos Imperiali, Huntington-Hill y Adams. Una vez analizados todos ellos el grupo que es más proporcional es el del método del resto mayor, en los que se encuentran el cociente Droop, Hare e Imperiali. En el grupo de los métodos de resto mayores el más proporcional es el método de Saint-Lague. El método D´Hondt, utilizado en España, no se encuentra entre los métodos más proporcionales por lo que no sería el método más deseable para utilizar en España, siendo conveniente debatir un cambio de método si lo que se busca es una mayor proporcionalidad entre los votos y escaños obtenidos.  
+  En el segundo bloque hemos analizado las distintas elecciones en España a partir del 1977, aplicando los distintos métodos de reparto de escaños para compararlos entre sí y analizando el nivel de proporcionalidad de los distintos métodos. Los métodos más proporcionados resultaron ser el Saint-Lague por parte de los métodos de promedio mayor y por los métodos de resto mayor el mejor método es el LR-Hare. El método que se desempeña peor es el método Imperiali. Al observar el método D´Hondt, método utilizado actualmente en España para el reparto de escaños al congreso, vemos que es el cuarto peor método. En el caso de que nuestro objetivo sea la pura proporcionalidad escaños-votos es claro que no es el método óptimo, pero en cambio sí que por otra parte se observa que tiene una cualidad particular que lo hace atractivo como método de reparto, esto es, a pesar de no ser el método más proporcional sí que facilita la gobernanza, siendo posible en varias elecciones alcanzar la mayoría absoluta. Por este motivo se comprende la elección de este método de reparto de escaños en España, puesto que entre todos los métodos analizados éste es dentro de los más proporcionales el que más facilita la gobernanza.
   
 ## Líneas futuras
 
