--- a/apendice01.Rmd
+++ b/apendice01.Rmd
@@ -165,6 +165,7 @@ library(dplyr)
 library(tibble)
 library(kableExtra)
 library(fs)
+library(plotly)
 
 df_session_packages <- devtools::session_info()$packages %>% 
   as.data.frame(.) %>% 
